Add Alexey Tulia to THANKS
Signed-off-by: Christophe Vu-Brugier <cvubrugier@yahoo.fr>

--- a/THANKS
+++ b/THANKS
@@ -1,2 +1,3 @@
+Alexey Tulia <alexey.tulia at gmail.com>
 Christophe Vu-Brugier <cvubrugier at yahoo.fr>
 Dan Walkes <danwalkes at trellis-logic.com>
