Add Lee Duncan to THANKS
Signed-off-by: Christophe Vu-Brugier <cvubrugier@fastmail.fm>

--- a/THANKS
+++ b/THANKS
@@ -1,3 +1,4 @@
 Alexey Tulia <alexey.tulia at gmail.com>
 Christophe Vu-Brugier <cvubrugier at yahoo.fr>
 Dan Walkes <danwalkes at trellis-logic.com>
+Lee Duncan <lduncan at suse.com>
