Add Andy Grover to THANKS
Signed-off-by: Christophe Vu-Brugier <cvubrugier@fastmail.fm>

--- a/THANKS
+++ b/THANKS
@@ -1,4 +1,5 @@
 Alexey Tulia <alexey.tulia at gmail.com>
+Andy Grover <agrover at redhat.com>
 Christophe Vu-Brugier <cvubrugier at yahoo.fr>
 Dan Walkes <danwalkes at trellis-logic.com>
 Lee Duncan <lduncan at suse.com>
