--- a/THANKS
+++ b/THANKS
@@ -3,3 +3,4 @@ Andy Grover <agrover at redhat.com>
 Christophe Vu-Brugier <cvubrugier at yahoo.fr>
 Dan Walkes <danwalkes at trellis-logic.com>
 Lee Duncan <lduncan at suse.com>
+Olaf Kirch <okir at suse.com>
