Add Victor Dodon to THANKS
Signed-off-by: Christophe Vu-Brugier <cvubrugier@fastmail.fm>

--- a/THANKS
+++ b/THANKS
@@ -4,3 +4,4 @@ Christophe Vu-Brugier <cvubrugier at yahoo.fr>
 Dan Walkes <danwalkes at trellis-logic.com>
 Lee Duncan <lduncan at suse.com>
 Olaf Kirch <okir at suse.com>
+Victor Dodon <dodonvictor at gmail.com>
