Change my email address
Signed-off-by: Christophe Vu-Brugier <cvubrugier@fastmail.fm>

--- a/THANKS
+++ b/THANKS
@@ -1,6 +1,6 @@
 Alexey Tulia <alexey.tulia at gmail.com>
 Andy Grover <agrover at redhat.com>
-Christophe Vu-Brugier <cvubrugier at yahoo.fr>
+Christophe Vu-Brugier <cvubrugier at fastmail.fm>
 Dan Walkes <danwalkes at trellis-logic.com>
 Lee Duncan <lduncan at suse.com>
 Olaf Kirch <okir at suse.com>
