Add Kyle Fortin to THANKS
Signed-off-by: Christophe Vu-Brugier <cvubrugier@fastmail.fm>

--- a/THANKS
+++ b/THANKS
@@ -2,6 +2,7 @@ Alexey Tulia <alexey.tulia at gmail.com>
 Andy Grover <agrover at redhat.com>
 Christophe Vu-Brugier <cvubrugier at fastmail.fm>
 Dan Walkes <danwalkes at trellis-logic.com>
+Kyle Fortin <kyle.fortin at oracle.com>
 Lee Duncan <lduncan at suse.com>
 Olaf Kirch <okir at suse.com>
 Victor Dodon <dodonvictor at gmail.com>
