--- a/THANKS
+++ b/THANKS
@@ -5,5 +5,6 @@ Dan Walkes <danwalkes at trellis-logic.com>
 Hao Wu <dragonawu at 163.com>
 Kyle Fortin <kyle.fortin at oracle.com>
 Lee Duncan <lduncan at suse.com>
+MostlyBrian <mostlybrian at gmail.com>
 Olaf Kirch <okir at suse.com>
 Victor Dodon <dodonvictor at gmail.com>
