Give example of an IP6 address for the "isns_server" parameter
Use 2001:db8::1 as the sample IPv6 address since the 2001::db8 prefix
is reserved for documentation (RFC 3849).

Also change the sample IPv4 address to 192.0.2.1 since the block
192.0.2.0/24 is reserved for documentation (RFC 5737).

Signed-off-by: Christophe Vu-Brugier <cvubrugier@fastmail.fm>

--- a/target-isns.8
+++ b/target-isns.8
@@ -16,7 +16,7 @@ iSNS server.
 .SH OPTIONS
 .TP
 \fB\-i\fR, \fB\-\-isns-server\fR=\fI\/HOSTNAME\/\fR
-set the hostname of the iSNS server
+set the hostname or IP address of the iSNS server
 .TP
 \fB\-p\fR, \fB\-\-isns-port\fR=\fI\/PORT\/\fR
 set the port number of the iSNS server (default iSNS port number is 3205)
