--- a/THANKS
+++ b/THANKS
@@ -1,10 +1,10 @@
-Alexey Tulia <alexey.tulia at gmail.com>
-Andy Grover <agrover at redhat.com>
-Christophe Vu-Brugier <cvubrugier at fastmail.fm>
-Dan Walkes <danwalkes at trellis-logic.com>
-Hao Wu <dragonawu at 163.com>
-Kyle Fortin <kyle.fortin at oracle.com>
-Lee Duncan <lduncan at suse.com>
-MostlyBrian <mostlybrian at gmail.com>
-Olaf Kirch <okir at suse.com>
-Victor Dodon <dodonvictor at gmail.com>
+Alexey Tulia
+Andy Grover
+Christophe Vu-Brugier
+Dan Walkes
+Hao Wu
+Kyle Fortin
+Lee Duncan
+MostlyBrian
+Olaf Kirch
+Victor Dodon
